# minecrust

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: chunking.md  controls.md
sbs5k/: Cargo.toml
sbs5k/src/: args.rs  backend.rs  backend_connection.rs  constants.rs  controls.rs  debug.rs  driver.rs  event.rs  initialisation.rs  main.rs  networking.rs  resources.rs  updatable.rs
sbs5k/src/controls/: controls_handler.rs  mod.rs  movement.rs
sbs5k/src/loading/: chunk_loading.rs  mesh_generation.rs  mod.rs
sbs5k/src/state/: chunks_state.rs  client_state.rs  mod.rs
sbs5k_client/: Cargo.toml
sbs5k_client/src/: constants.rs  driver.rs  initialisation.rs  main.rs
sbs5k_client/src/controls/: controls_handler.rs  movement.rs
sbs5k_client/src/loading/: chunk_loading.rs  mesh_generation.rs  mod.rs
sbs5k_client/src/state/: chunks_state.rs  client_state.rs
sbs5k_core/: Cargo.toml
sbs5k_core/src/: backend.rs  backend_api.rs  block.rs  chunk.rs  entity.rs  game.rs  geometry.rs  lib.rs  messages.rs  networking.rs  networking_libevent.rs  networking_mio.rs  player.rs  stream.rs  world.rs
sbs5k_core/src/generators/: flat_terrain_generator.rs  perlin_noise_generator.rs
sbs5k_engine/: Cargo.toml
sbs5k_engine/src/: camera.rs  events.rs  game.rs  lib.rs  lighting.rs  model.rs  rendering.rs  resources.rs  scene.rs  shaders.rs  skybox.rs  texture.rs  time.rs  uniforms.rs  window.rs
sbs5k_maths/: Cargo.toml
sbs5k_messages/: Cargo.toml  build.rs
sbs5k_messages/proto/: backend.proto  block.proto  chunk.proto  event.proto  events.proto  world.proto
sbs5k_messages/src/: lib.rs
sbs5k_network/: Cargo.toml
sbs5k_network/src/: udp.rs
sbs5k_server/: Cargo.toml
sbs5k_server/src/: args.rs  backing_store.rs  client_task.rs  main.rs  player_state.rs  request_processor.rs  server.rs  state.rs
sbs5k_world/: Cargo.toml
sbs5k_world/src/: chunk.rs  world.rs
sbs5k_world/src/generators/: flat_terrain_generator.rs  mod.rs  perlin_noise_generator.rs
shaders/: cubes.frag  cubes.vert  scene_objects.frag  scene_objects.vert  skybox.frag  skybox.vert  triangle.vert  types.glsl
src/: main.rs
src/client/: constants.rs  debug.rs  driver.rs  initialisation.rs  mesh_generation.rs  mod.rs  util.rs
src/client/controls/: controls_handler.rs  mod.rs  movement.rs
src/client/loading/: chunk_loading.rs  mesh_generation.rs  mod.rs
src/client/state/: chunks_state.rs  client_state.rs  mod.rs  state.rs
src/engine/: binding.rs  camera.rs  controls.rs  driver.rs  events.rs  fog.rs  inputs.rs  lighting.rs  mod.rs  model.rs  movement.rs  rendering.rs  resources.rs  scene.rs  shaders.rs  skybox.rs  texture.rs  time.rs  triangle.rs  uniforms.rs  window.rs
src/game/: bencraft.rs  controls.rs  driver.rs  example.rs  mod.rs
src/utils/: maths.rs
src/world/: block.rs  chunk.rs  cube.rs  entity.rs  generation.rs  mod.rs  world.rs
src/world/generators/: flat_terrain_generator.rs  perlin_noise_generator.rs
textures/: cubes.xcf
