[package]
name = "sbs5k"
description = "A rip-off of a game you've never heard of..."
version = "0.1.0"
edition = "2021"
authors = ["Ben Cole <bencole12345@gmail.com>"]

[dependencies]
bincode = "^1.3.3"
clap = { version = "^4.1.10", features = ["derive"] }
glm = "^0.2.3"
nalgebra = { version = "^0.32.2", features = ["serde-serialize"] }

sbs5k_core = { path = "../sbs5k_core" }
sbs5k_engine = { path = "../sbs5k_engine" }

[dev-dependencies]
rstest = "^0.16.0"

[[bin]]
name = "sbs5k"
path = "src/main.rs"
