[package]
name = "sbs5k_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = "0.2.3"
nalgebra = "0.29.0"
rand = "0.8.5"

sbs5k_messages = { path = "../sbs5k_messages" }

[dev-dependencies]
rstest = "0.12.0"
