[package]
name = "sbs5k_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = "^0.2.3"
nalgebra = { version = "^0.32.2", features = ["serde-serialize"] }
postcard = "^1.0.0"
rand = "^0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde-big-array = "^0.5.1"

[dev-dependencies]
rstest = "^0.16.0"
