[package]
name = "sbs5k_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "^1.3.3", features = [] }
glm = "^0.2.3"
nalgebra = { version = "^0.32.2", features = ["serde-serialize"] }
rand = "^0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde-big-array = "^0.5.1"
# TODO: Confirm we need tokio in this crate
tokio = { version = "^1.35", features = ["rt", "time", "macros", "net", "sync"] }

[dev-dependencies]
rstest = "^0.16.0"
