[package]
name = "sbs5k_messages"
description = "Library contianing common types for use by the client and server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8.0"
