[package]
name = "sbs5k_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.1.10", features = ["derive"] }
tokio = { version = "^1.0", features = ["macros", "net", "rt-multi-thread"]}

sbs5k_core = { path = "../sbs5k_core" }
