[package]
name = "sbs5k_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbs5k_core = { path = "../sbs5k_core" }

bincode = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.35", features = ["rt", "rt-multi-thread", "macros", "net"] }
